# OS_course_design

./: .gitignore  CMakeLists.txt  README.md  develop.md
driver/: CMakeLists.txt  Makefile  cache.c  cache.h  fs.c  fs.h  myfs.c  myfs.h
scripts/: build.sh  setup.sh
src/: filesystem.cpp  filesystem.h  main.cpp
src/core/: bitmap.cpp  bitmap.h  cache.cpp  cache.h  directory.cpp  directory.h  disk.cpp  disk.h  inode.cpp  inode.h
src/process/: scheduler.cpp  scheduler.h  sync.cpp  sync.h
tools/: CMakeLists.txt  debug.c  mkfs.c  monitor.cpp
